<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/usertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/user_profile"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold" >
    </TextView>

    <EditText
        android:id="@+id/EditText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/nickname"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/EditText_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/age"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" >
        </TextView>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_pirates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_ninjas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/EditText_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/EditText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" >
    </EditText>

    <Button
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/botton_background"
        android:text="@string/photo"
        android:textColor="@color/White" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/botton_background"
        android:text="@string/submit"
        android:textColor="@color/White" />

</LinearLayout>