<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_create_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/event_name"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" >
    </EditText>

    <TextView
        android:id="@+id/event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/event_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/event_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:hint="@string/event_start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" >
        </TextView>

        <TextView
            android:id="@+id/event_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:hint="@string/event_end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/member"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" >
        </TextView>

        <EditText
            android:id="@+id/member_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:hint="@string/member_no"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" >
        </EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/event_description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:hint="@string/event_description"
        android:inputType="textMultiLine"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" >
    </EditText>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/event_address"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/event_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.67"
            android:hint="@string/address"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" >
        </EditText>

        <ImageView
            android:id="@+id/ImageView_event_address_position"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/map_current_position" />
    </LinearLayout>

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/botton_background"
        android:text="@string/create"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/botton_background"
        android:text="@string/cancel"
        android:textColor="@color/White" />

</LinearLayout>