<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/event_list_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/event_list_image"
        android:padding="5dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/member_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_name"
        android:layout_toRightOf="@+id/event_list_image"
        android:padding="5dp"
        android:text="@string/hello_world" />
    <TextView
        android:id="@+id/friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_name"
        android:layout_toRightOf="@+id/member_no"
        android:padding="5dp"
        android:text="@string/friends" />


    
      <ImageView
        android:id="@+id/selsct_row"
        android:layout_width="40dp"
        android:layout_height="40dp"
       android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/tick" />

</RelativeLayout>